[package]
name = "bary"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"

bary-macros = {path = "bary-macros"}
bary-config = {path = "bary-config"}
bary-server = { path = "bary-server" }
tar = "0.4.38"
[workspace]
members = ["bary-macros", "bary-config", "bary-server"]
