[package]
name = "bary"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = [ "js", "javascript", "bary", "framework", "web" ]
categories = [ "web-programming" ]
homepage = "https://github.com/0skar16/bary"
repository = "https://github.com/0skar16/bary"
description = "A framework to build http servers with rust backend and vite frontend"
license = "GPL-3"
readme = "README.md"
[dependencies]
anyhow = "1.0.70"

bary-macros = {path = "bary-macros", version = "0.1"}
bary-config = {path = "bary-config", version = "0.1"}
bary-server = {path = "bary-server", version = "0.1"}
tar = "0.4.38"
[workspace]
members = ["bary-macros", "bary-config", "bary-server"]
