[package]
name = "bary-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bary-config = {path = "../bary-config"}
quote = "1.0.26"
syn = { version = "2.0.14", features = ["full"] }
bary-server = {path = "../bary-server"}
serde = { version = "1.0.160", features = ["derive"] }
serde_tokenstream = "0.2.0"
proc-macro2 = "1.0.56"
serde_yaml = "0.9.21"
