[package]
name = "bary-macros"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/0skar16/bary"
repository = "https://github.com/0skar16/bary"
description = "A framework to build http servers with rust backend and vite frontend"
license = "GPL-3.0-only"
[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bary-server = {path = "../bary-server", version = "0"}
quote = "1"
syn = { version = "2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_tokenstream = "0.2"
proc-macro2 = "1"
