[package]
name = "bary-server"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/0skar16/bary"
repository = "https://github.com/0skar16/bary"
description = "A framework to build http servers with rust backend and vite frontend"
license = "GPL-3.0-only"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rocket = "0.4"
tar = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"